# disio

./: .flake8  .gitignore  README.rst  pyproject.toml
tests/: test_disio.py
