[tool.poetry]
name = "disio"
version = "0.1.0"
description = "A future discord client and bot framework for python..."
authors = ["AlekseyZz <thehentwill@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.8b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
